--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ function MM_swapImage() { //v3.0
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="https://es.wikipedia.org/wiki/Batalla_de_Puebla" data-role="button">
-<h2>Más información</h2>
+<h4>Más información</h4>
 </a>
 </li>
 </ul>
@@ -213,14 +213,14 @@ function MM_swapImage() { //v3.0
 <p>Se le dotó de la tecnología más avanzada para que los visitantes conozcan en forma amena los hechos desarrollados en la zona de los Fuertes. Cuenta con pantallas táctiles, proyecciones en tercera dimensión y mecanismos de interacción tecnológica para atender las solicitudes de información de sus visitantes, en su mayoría escolares. En otra de sus salas se observan hologramas de combatientes que escenifican la batalla del 5 de mayo, pantallas donde se proyectan las acciones de Ignacio Zaragoza durante la gesta, así como vestuarios y diversas fotografías.</p>
 <div data-role="collapsible" data-content-theme="false">
 <h1>Imagenes</h1>
-<center><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image15','','imagenes/museo2.jpg',1)"><img src="imagenes/museo1.jpg" width="400" height="400" id="Image15"></a>
+<center><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image15','','imagenes/museo2.jpg',1)"><img src="imagenes/museo1.jpg" width="250" height="250" id="Image15"></a>
 </center>
 </div>
 <center><div style="width:40%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="http://puebla.travel/es/museos/item/museo-interactivo-de-la-batalla-del-5-de-mayo" data-role="button">
-<h2>Más información</h2>
+<h4>Más información</h4>
 </a>
 </li>
 </ul>
@@ -232,14 +232,14 @@ function MM_swapImage() { //v3.0
 <p>Son unas antiguas edificaciones militares que se encuentran en la ciudad de Puebla. Originalmente se trataba de capillas construidas en lo alto de un cerro Acueyametepec, que fueron reconstituidas a principios del siglo XIX como fortificaciones con finalidades militares. Sirvieron como escenario principal tanto en la batalla como en el sitio de Puebla, durante la Segunda Intervención Francesa en México. Declarados como patrimonio histórico de México, actualmente albergan museos de sitio.</p></b>
 <div data-role="collapsible" data-content-theme="false">
 <h1>Imagenes</h1>
-<center><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image16','','imagenes/fuerte2.jpg',1)"><img src="imagenes/fuerte1.jpg" width="400" height="400" id="Image16"></a>
+<center><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image16','','imagenes/fuerte2.jpg',1)"><img src="imagenes/fuerte1.jpg" width="250" height="250" id="Image16"></a>
 </center>
 </div>
 <center><div style="width:40%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="http://www.corazondepuebla.com.mx/loreto.html" data-role="button">
-<h2>Más información</h2>
+<h4>Más información</h4>
 </a>
 </li>
 </ul>
@@ -266,33 +266,33 @@ function MM_swapImage() { //v3.0
 <ul>
 <li>Ignacio Zaragoza</li>
 <p><img src="imagenes/iz.jpg" width="40%" height="40%"></p>
-<div style="width:40%;">
+<div style="width:70%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="https://es.wikipedia.org/wiki/Ignacio_Zaragoza" data-role="button">
-<h2>Más información sobre este personaje</h2>
+<h5>Más información sobre este personaje</h5>
 </a>
 </li>
 </ul>
 </div>
 <li>Porfirio Díaz</li>
 <p><img src="imagenes/pd.jpg" width="40%" height="40%"></p>
-<div style="width:40%;">
+<div style="width:70%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="https://es.wikipedia.org/wiki/Porfirio_D%C3%ADaz" data-role="button">
-<h2>Más información sobre este personaje</h2>
+<h5>Más información sobre este personaje</h5>
 </a>
 </li>
 </ul>
 </div>
 <li>Miguel Negrete</li>
 <p><img src="imagenes/mn.jpg" width="40%" height="40%"></p>
-<div style="width:40%;">
+<div style="width:70%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="https://es.wikipedia.org/wiki/Miguel_Negrete" data-role="button">
-<h2>Más información sobre este personaje</h2>
+<h5>Más información sobre este personaje</h5>
 </a>
 </li>
 </ul>
@@ -301,11 +301,12 @@ function MM_swapImage() { //v3.0
 <p><img src="imagenes/fl.jpg" width="40%" height="40%"></p>
 
 <li>Felipe Berriózabal</li>
-<p><img src="imagenes/fb.jpg" width="40%" height="40%"></p><div style="width:40%;">
+<p><img src="imagenes/fb.jpg" width="40%" height="40%"></p>
+<div style="width:70%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="https://es.wikipedia.org/wiki/Felipe_Berrioz%C3%A1bal" data-role="button">
-<h2>Más información sobre este personaje</h2>
+<h5>Más información sobre este personaje</h5>
 </a>
 </li>
 </ul>
