--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ function MM_swapImage() { //v3.0
 <center><img src="imagenes/frances1.jpg" width="50%" height="50%"></center>
 </div>
 </div>
-<center><div style="width:40%;">
+<center><div style="width:60%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="https://es.wikipedia.org/wiki/Batalla_de_Puebla" data-role="button">
@@ -216,7 +216,7 @@ function MM_swapImage() { //v3.0
 <center><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image15','','imagenes/museo2.jpg',1)"><img src="imagenes/museo1.jpg" width="250" height="250" id="Image15"></a>
 </center>
 </div>
-<center><div style="width:40%;">
+<center><div style="width:60%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="http://puebla.travel/es/museos/item/museo-interactivo-de-la-batalla-del-5-de-mayo" data-role="button">
@@ -235,7 +235,7 @@ function MM_swapImage() { //v3.0
 <center><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image16','','imagenes/fuerte2.jpg',1)"><img src="imagenes/fuerte1.jpg" width="250" height="250" id="Image16"></a>
 </center>
 </div>
-<center><div style="width:40%;">
+<center><div style="width:60%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="http://www.corazondepuebla.com.mx/loreto.html" data-role="button">
@@ -266,33 +266,33 @@ function MM_swapImage() { //v3.0
 <ul>
 <li>Ignacio Zaragoza</li>
 <p><img src="imagenes/iz.jpg" width="40%" height="40%"></p>
-<div style="width:70%;">
+<div style="width:90%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="https://es.wikipedia.org/wiki/Ignacio_Zaragoza" data-role="button">
-<h5>Más información sobre este personaje</h5>
+<h6>Más información sobre este personaje</h6>
 </a>
 </li>
 </ul>
 </div>
 <li>Porfirio Díaz</li>
 <p><img src="imagenes/pd.jpg" width="40%" height="40%"></p>
-<div style="width:70%;">
+<div style="width:90%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="https://es.wikipedia.org/wiki/Porfirio_D%C3%ADaz" data-role="button">
-<h5>Más información sobre este personaje</h5>
+<h6>Más información sobre este personaje</h6>
 </a>
 </li>
 </ul>
 </div>
 <li>Miguel Negrete</li>
-<p><img src="imagenes/mn.jpg" width="40%" height="40%"></p>
-<div style="width:70%;">
+<p><img src="imagenes/mn.JPG" width="40%" height="40%"></p>
+<div style="width:90%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="https://es.wikipedia.org/wiki/Miguel_Negrete" data-role="button">
-<h5>Más información sobre este personaje</h5>
+<h6>Más información sobre este personaje</h6>
 </a>
 </li>
 </ul>
@@ -302,11 +302,11 @@ function MM_swapImage() { //v3.0
 
 <li>Felipe Berriózabal</li>
 <p><img src="imagenes/fb.jpg" width="40%" height="40%"></p>
-<div style="width:70%;">
+<div style="width:90%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
 <a href="https://es.wikipedia.org/wiki/Felipe_Berrioz%C3%A1bal" data-role="button">
-<h5>Más información sobre este personaje</h5>
+<h6>Más información sobre este personaje</h6>
 </a>
 </li>
 </ul>
