--- a/index.html
+++ b/index.html
@@ -227,9 +227,8 @@ function MM_swapImage() { //v3.0
 </div>
 </center>
 
-
 <li>Fuertes de Loreto y Guadalupe</li>
-<p>Son unas antiguas edificaciones militares que se encuentran en la ciudad de Puebla. Originalmente se trataba de capillas construidas en lo alto de un cerro Acueyametepec, que fueron reconstituidas a principios del siglo XIX como fortificaciones con finalidades militares. Sirvieron como escenario principal tanto en la batalla como en el sitio de Puebla, durante la Segunda Intervención Francesa en México. Declarados como patrimonio histórico de México, actualmente albergan museos de sitio.</p></b>
+<p>Son unas antiguas edificaciones militares que se encuentran en la ciudad de Puebla. Originalmente se trataba de capillas construidas en lo alto de un cerro Acueyametepec, que fueron reconstituidas a principios del siglo XIX como fortificaciones con finalidades militares. Sirvieron como escenario principal tanto en la batalla como en el sitio de Puebla, durante la Segunda Intervención Francesa en México. Declarados como patrimonio histórico de México, actualmente albergan museos de sitio.</p>
 <div data-role="collapsible" data-content-theme="false">
 <h1>Imagenes</h1>
 <center><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image16','','imagenes/fuerte2.jpg',1)"><img src="imagenes/fuerte1.jpg" width="250" height="250" id="Image16"></a>
@@ -245,12 +244,13 @@ function MM_swapImage() { //v3.0
 </ul>
 </div>
 </center>
-</div>
 </ul>
+</b>
 </div>
 </div>
  <div data-role="footer" data-theme="b" data-position="fixed">
 <h4>Aplicacion Seis, SHCJ</h4>
+</div>
 </div>
 </div>
 
